<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">

    <LinearLayout
        android:id="@+id/alert_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round_rectangle_red"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:id="@+id/img_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:srcCompat="@android:drawable/ic_dialog_info" />

        <TextView
            android:id="@+id/txt_alertText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_alertBox_terms1"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/txt_alertText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_alertBox_terms2"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_terms_agree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/red"
            android:text="@string/button_alertBox"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>